# FairStay

./: .env  .gitattributes  README.md  main.py  pyproject.toml
backend/: ai_agent.py  crud.py  database.py  main.py  models.py  schemas.py
backend/ui/: app.py
